--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,33 +1,53 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Jobs</h1>
+<%= form_for_filterrific @filterrific,  html: { id: 'filterrific-no-ajax-auto-submit' } do |f| %>
+ 
+  <div>
+    Job Title
+    <%= f.select(
+      :job_title,
+      @filterrific.select_options[:job_title],
+      { include_blank: '- Any -' }
+    ) %>
+  </div>
+  <div>
+    Company Name
+    <%= f.select(
+      :company_name,
+      @filterrific.select_options[:company_name],
+      { include_blank: '- Any -' }
+    ) %>
+  </div>
+  <div>
+    Location
+    <%= f.select(
+      :location,
+      @filterrific.select_options[:location],
+      { include_blank: '- Any -' }
+    ) %>
+  </div>
+  
+  <div>
+    Sorted by
+    
+  </div>
+  <div>
+    <%= link_to(
+      'Reset filters',
+      reset_filterrific_url,
+    ) %>
+  </div>
+  
+  <%= render_filterrific_spinner %>
+  <%= f.submit 'Filter' %>
+<% end %>
 
-<table>
-  <thead>
-    <tr>
-      <th>Company name</th>
-      <th>Jobtitle</th>
-      <th>Description</th>
-      <th>Location</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @jobs.each do |job| %>
-      <tr>
-        <td><%= job.company_name %></td>
-        <td><%= job.jobtitle %></td>
-        <td><%= job.description %></td>
-        <td><%= job.location %></td>
-        <td><%= link_to 'Show', job %></td>
-        <td><%= link_to 'Edit', edit_job_path(job) %></td>
-        <td><%= link_to 'Destroy', job, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<%= render(
+  partial: 'jobs/list',
+  locals: { jobs: @jobs }
+) %>
 
-<br>
+
 
 <%= link_to 'New Job', new_job_path %>
