After adding minor design mods

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,16 @@
 </head>
 <body>
 
-<%= yield %>
+<div id="header" class="container">
+	<div>
+		<img id="logo" src="/assets/rsi.png">
+	</div>
+</div>
+<div id="page">
+	<div class="container">
+		<%= yield %>
+	</div>
+</div>
 
 </body>
 </html>
