--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,17 @@
 <body>
 
 <div id="header" class="container">
+
 	<div>
 		<img id="logo" src="/assets/rsi.png">
 	</div>
+	<% if user_signed_in? %>
+                  <li class="<%= 'active' if current_page?(edit_user_registration_path) %>"><%= link_to "Edit profile", edit_user_registration_path %></li>
+                  <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
+                <% else %>
+                  <li class="<%= 'active' if current_page?(new_user_session_path) %>"><%= link_to "Sign in", new_user_session_path %></li>
+                <% end %>
+		
 </div>
 <div id="page">
 	<div class="container">
