--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,8 @@
 <body>
 
 <div id="header" class="container">
-	<div>
-		<img id="logo" src="/assets/rsi.png">
+	<div class="image-box">
+		<img class="image-centered" src="/assets/rsi.png"></img>
 	</div>
 </div>
 <div id="page">
