--- a/app/assets/stylesheets/default.css
+++ b/app/assets/stylesheets/default.css
@@ -51,6 +51,14 @@
 	{
 		color: #383326;
 	}
+
+	.previous_page.disabled, .next_page.disabled{
+		color: #111111;
+	}
+
+	.current {
+		color: #777777;
+	}
 	
 	a:hover
 	{
@@ -95,7 +103,7 @@
 	.image-centered
 	{
 		display: block;
-		margin: 0 0 2em 0;
+		margin: 0 0 0 0;
 	}
 	
 	.image-centered img
@@ -329,21 +337,21 @@
 		display: inline-block;
 	}
 	
-	#menu li
+	#menu li, #menu input
 	{
 		display: block;
 		float: left;
 		text-align: center;
 	}
 	
-	#menu li a, #menu li span
+	#menu li a, #menu li span, #menu li input
 	{
 		padding: 0.7em 1.5em;
 		text-decoration: none;
 		color: rgba(255,255,255,0.6);
 	}
 	
-	#menu li:hover a, #menu li.active a, #menu li.active span
+	#menu li:hover a, #menu li.active a, #menu li.active span, #menu input.active
 	{
 		background: rgba(0,0,0,0.5);
 		border-radius: 20px;
