--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,12 +12,17 @@
 
 	<div class="image-box">
 		<img class="image-centered" src="/assets/rsi.png"></img>
+	</div>
 
 	<% if user_signed_in? %>
+				<ul>
                   <li class="<%= 'active' if current_page?(edit_user_registration_path) %>"><%= link_to "Edit profile", edit_user_registration_path %></li>
                   <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
+                  </ul>
                 <% else %>
+                <ul>
                   <li class="<%= 'active' if current_page?(new_user_session_path) %>"><%= link_to "Sign in", new_user_session_path %></li>
+                  </ul>
                 <% end %>
 		
 </div>
